[screencasts]: fix the thumnail overflowing text issue + general layout updates. (#501)

--- a/src/assets/scss/_screencasts.scss
+++ b/src/assets/scss/_screencasts.scss
@@ -56,7 +56,8 @@
 .cast > div > * {
   flex: 0 0 auto;
 }
-.cast h2 {
+.cast h2,
+.cast .h2 {
   flex: 1;
   margin: 0;
   font-size: var(--xx-small);
